设置更多博客功能
新添加的博客功能有：
* 在博客底部增加阅读进度条
* 在博客右上角添加 Github 小猫标记，可以链接到我的 Github 网站
* 添加 SEO 功能，使用 html tag 进行验证，在 next 配置文件中添加
  google_site_verification 数据行
* 添加 google analytics ID，可以使用它统计站点数据
* 添加本地搜索功能

修改的博客设置有：
* 代码块风格设置为 mac， 并可以复制
* 日常的小太阳标志换成实心的 fa-solid ，与其它标志更搭一些
* 修改博客名为 邱小伙的博客
* 将 归档 每页显示 10 条博客修改为显示 16 条博客

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Qiu's 博客
+title: 邱小伙的博客
 subtitle: ''
 description: ''
 keywords:
@@ -13,8 +13,8 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
-permalink: :year/:month/:day/:title/
+url: http://qiuxiaohuo.github.io
+permalink: :title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -62,7 +62,7 @@ prismjs:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 16
   order_by: -date
 
 # Category & Tag
@@ -113,3 +113,10 @@ emoji:
   className: github-emoji
   styles:
   customEmojis:
+
+# Plugin: search
+search:
+  path: search.xml
+  field: post
+  content: true
+  format: html
